--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,80 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url("assets/fonts/Roboto-Thin.ttf");
-    font-weight: 100;
-  }
+  font-family: 'Roboto';
+  src: url("assets/fonts/Roboto-Thin.ttf");
+  font-weight: 100;
+}
+
 @font-face {
-    font-family: 'Roboto';
-    src: url("assets/fonts/Roboto-Regular.ttf");
-    font-weight: 300;
-  }
+  font-family: 'Roboto';
+  src: url("assets/fonts/Roboto-Regular.ttf");
+  font-weight: 300;
+}
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+nav {
+  display: block;
+}
+
+.header {
+  border: 1px solid red;
+  background-color: rgb(33, 113, 148);
+}
+
+.main {
+  border: 1px solid red;
+}
+
+.footer {
+  border: 1px solid red;
+}
+
+@media (max-width: 1440px) {
+  .container {
+    padding: 0 20px;
   }
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  min-height: 50px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  padding: 0 20px;
+  line-height: 50px;
+}
+
+.nav-link {
+  position: relative;
+  padding: 0 12px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 50px;
+  color: white;
+  transition: 0.3s;
+}
+.nav-link:hover {
+  color: black;
+}
