--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,18 @@ html {
 }
 
 body {
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-width: 320px;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto-Regular', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgb(79, 86, 93);
 }
 
 nav {
@@ -32,7 +38,6 @@ nav {
 }
 
 .header {
-  border: 1px solid red;
   background-color: rgb(33, 113, 148);
 }
 
@@ -75,6 +80,72 @@ nav {
   color: white;
   transition: 0.3s;
 }
+
 .nav-link:hover {
   color: black;
+}
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.main-left-container {
+  width: 40%;
+  background-color: white;
+  padding: 0 50px 0 70px;
+}
+
+.main-right-container {
+  width: 60%;
+  background-color: rgb(110, 180, 220, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 50px;
+}
+
+.avatar {
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  width: 200px;
+  margin: 50px 50px;
+  position: relative;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profile-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: left;
+  text-transform: uppercase;
+}
+.section-title {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: rgb(79, 86, 93);;
+}
+
+.main-title {
+  margin-top: 100px;
+  font-size: 32px;
+  font-weight: 300;
+  letter-spacing: 7px;
+  word-spacing: 3px;
+  line-height: 30px;
+}
+
+.section-subtitle {
+  margin-bottom: 80px;
+  line-height: 30px;
+  font-weight: 400;
+  white-space: 2px;
 }
