--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
-  color: rgb(79, 86, 93);
+  color: #4F565E;
 }
 
 nav {
@@ -38,7 +38,7 @@ nav {
 }
 
 .header {
-  background-color: rgb(33, 113, 148);
+  background-color: #217194;
 }
 
 .main {
@@ -47,14 +47,8 @@ nav {
 }
 
 .footer {
-  background-color: rgb(33, 113, 148);
   padding: 20px;
-}
-
-@media (max-width: 1440px) {
-  .container {
-    padding: 0 20px;
-  }
+  background-color: #217194;
 }
 
 .container {
@@ -79,12 +73,12 @@ nav {
   font-size: 20px;
   font-weight: 300;
   line-height: 50px;
-  color: white;
+  color: #ffffff;
   transition: 0.3s;
 }
 
 .nav-link:hover {
-  color: black;
+  color: #000000;
 }
 
 .main-container {
@@ -94,24 +88,24 @@ nav {
 
 .main-left-container {
   width: 40%;
-  background-color: white;
   padding: 0 50px 0 70px;
+  background-color: #ffffff;
 }
 
 .main-right-container {
   width: 60%;
-  background-color: rgb(110, 180, 220, 0.4);
   display: flex;
   flex-direction: column;
   padding: 0 50px;
+  background-color: rgb(110, 180, 220, 0.4);
 }
 
 .header-avatar {
   display: flex;
   justify-content: center;
-  background-color: white;
   width: 40%;
   padding: 50px 30px 35px;
+  background-color: #ffffff;
 }
 
 .avatar {
@@ -127,11 +121,10 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  padding: 0 50px;
   background-color: rgb(110, 180, 220, 0.4);
   text-align: left;
   text-transform: uppercase;
-  padding: 0 50px;
-
 }
 
 .section-title {
@@ -140,7 +133,7 @@ nav {
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 3px;
-  color: rgb(19, 38, 202);
+  color: #1326CA;
   ;
 }
 
@@ -223,7 +216,6 @@ nav {
 }
 
 .courses-item::before {
-
   background-color: #217194;
   border-radius: 50%;
 }
@@ -243,12 +235,11 @@ nav {
 .date {
   margin-right: 10px;
   text-align: center;
+  padding: 2px 10px;
   background-color: #217194;
-  color: black;
+  color: #000000;
   border-radius: 4px;
   display: inline-block;
-  font-family: 'ralewaybold';
-  padding: 2px 10px;
 }
 
 .footer-container {
@@ -256,7 +247,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  color: white;
+  color: #ffffff;
 }
 
 .rss {
